# epicmeter

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  common.cpp  v2.cpp
include/epicmeter/: benchmark.hpp  compiler.hpp  macro.hpp  traits.hpp  types.hpp
include/epicmeter/output/: json.hpp  mod.hpp  table.hpp
include/ticktack/: benchmark.hpp  compiler.hpp  macro.hpp  traits.hpp  types.hpp  watcher.hpp
include/ticktack/output/: json.hpp  mod.hpp  table.hpp
include/ticktack/printer/: json.hpp  table.hpp
include/ticktack/v2/: benchmark.hpp  macro.hpp  traits.hpp  types.hpp
include/ticktack/v2/output/: mod.hpp  table.hpp
src/: benchmark.cpp  main.cpp  stats.cpp
src/output/: json.cpp  table.cpp
src/printer/: table.cpp
src/v2/: benchmark.cpp
src/v2/output/: json.cpp  table.cpp
