CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT ticktack-example)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/.. ${CMAKE_BINARY_DIR}/ticktack)

SET(CMAKE_BUILD_TYPE "Release")

SET(HEADERS
)

SET(SOURCES
#    common
    v2
)

PROJECT(${PROJECT})

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/../include
)

LINK_DIRECTORIES(
    ${CMAKE_BINARY_DIR}/ticktack
)

ADD_EXECUTABLE(${PROJECT} ${HEADERS} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT}
    ticktack
    ticktack-main
)

ADD_DEFINITIONS(-std=c++0x)
